@@ -1,3 +1,7 @@
+2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Parser/NRefactoryParser.cs: Track api changes.
+
 2009-01-27  Mike Krüger  <mkrueger@novell.com>
 
 	* Parser/mcs:
